UIとbackendの接続を実装
